<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="demo.webmyne.com.calculatordemo.MainActivity">

    <RelativeLayout
        android:id="@+id/rvDisplayLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/display_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|left"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp8"
            android:paddingTop="@dimen/dp8">

            <me.grantland.widget.AutofitTextView
                android:id="@+id/editDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:editable="false"
                android:gravity="right"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:singleLine="true"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/sp50"
                app:textScale="0.75"
                autofit:minTextSize="20sp" />

            <me.grantland.widget.AutofitTextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:editable="false"
                android:gravity="right"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:singleLine="true"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/sp50"
                app:textScale="0.75"
                autofit:minTextSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rippleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/theme1RippleColor"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/first_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/seven"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/seven"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/eight"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/eight"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/nine"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/nine"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/two_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/four"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/four"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/five"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/five"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/six"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/six"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/three_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/one"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/one"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/two"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/two"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/three"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/three"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forth_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/dot"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/dot"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/zero"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/zero"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/delete"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:padding="@dimen/dp8"
                    android:text="@string/delete"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/sp20"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/division"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:padding="@dimen/dp8"
                android:text="@string/division"
                android:textColor="@color/colorSilver"
                android:textSize="@dimen/sp20" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/multi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:padding="@dimen/dp8"
                android:text="@string/multiplication"
                android:textColor="@color/colorSilver"
                android:textSize="@dimen/sp20" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:padding="@dimen/dp8"
                android:text="@string/minus"
                android:textColor="@color/colorSilver"
                android:textSize="@dimen/sp20" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:padding="@dimen/dp8"
                android:text="@string/plus"
                android:textColor="@color/colorSilver"
                android:textSize="@dimen/sp20" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/them1RippleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme1RippleColor"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/them2RippleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme2RippleColor"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgThemeChange"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:src="@drawable/theme_2"
            android:text="@string/ok"
            android:textColor="@color/colorSilver"
            android:textSize="@dimen/sp20" />

        <Button
            android:id="@+id/equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:text="@string/equal"
            android:textColor="@color/colorSilver"
            android:textSize="@dimen/sp20" />
    </LinearLayout>

</LinearLayout>
